catalog wrap fix

--- a/src/components/catalogContainer/CatalogContainer.module.scss
+++ b/src/components/catalogContainer/CatalogContainer.module.scss
@@ -2,10 +2,16 @@
 	display: grid;
 	grid-template-columns: auto 1fr;
 	gap: 20px;
+	@media(max-width: 768px) {
+			grid-template-columns: 1fr;
+		}
 }
 
 .filter {
 	width: 200px;
+	@media(max-width: 768px) {
+			width: 100%;
+		}
 }
 
 .title {
